# ner-api

./: pyproject.toml  setup.py
ner_api/: client.py
tests/: test_doubles.py  test_ner_client.py
