[tool.poetry]
name = "ner-api"
version = "0.1.0"
description = ""
authors = ["gsingh <gds31.gagandeepsingh@gmail.com>"]
readme = "README.md"
packages = [{include = "ner_api"}]

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.4.2"
selenium = "^4.5.0"
pytest = "^7.2.0"
flask = "^2.2.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"
mypy = "^0.982"
pycodestyle = "^2.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
